The image captured from thr action bar camera button now get saved into the database and put into the next empty ImageView
Changed the return type from PhotoAndID[] of select all photos to ArrayList<PhotoAndID>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="beast_medical_default">-Weight: 14lbs\n-Vaccinated\n-Neutered\n-All teeth removed</string>
     <string name="beast_photo_description">Photo of the Beast</string>
     <string name="new_photo">Take a new photo</string>
+    <string name="photo_error">You can\'t take a new photo, because you already have the maximum.\n\n
+    Tap and hold on an image to delete it.</string>
 </resources>
