--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,11 @@
     <string name="new_photo">Take a new photo</string>
     <string name="photo_error">You can\'t take a new photo, because you already have the maximum.\n\n
     Tap and hold on an image to delete it.</string>
+    <string name="alert_delete_title">Delete this photo?</string>
+    <string name="alert_delete_message">This cannot be un-done.</string>
+    <string name="alert_positive">Yes</string>
+    <string name="alert_negative">no</string>
+    <string name="delete_failure">You must have at least 2 photos.</string>
+    <string name="failed">Failed to delete.</string>
+
 </resources>
